# local-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: cheatsheet.txt  commander.txt  decisions.md  todo-list.md
scripts/: ai_health.sh  ai_logs.sh  ai_restart.sh  ai_smoketest.sh  ai_start.sh  ai_status.sh  ai_stop.sh  docker_start.sh  local_ai_compile.sh  ollama_workbench_compile.sh  ollama_workbench_smoketest.sh  openwebui_start.sh  session_init.sh
scripts/tests/: README.txt  doctor_test.sh  fixtures_check.sh  local_ai_smoketest.sh  ollama_workbench_smoketest.sh  python_tests.sh  run_all.sh  status_test.sh
src/local_ai/: cli.py  config.py  fs.py  log.py  profile.py  shell.py  workspace.py
src/local_ai/test/: test_workspace.py
src/ollama_workbench/: __init__.py  cli.py  config.py  content_window.py  doctor.py  fs.py  log.py  memory.py  output.py  paths.py  profile.py  runtime.py  schemas.py  shell.py  tools.py  web.py  workspace.py
src/ollama_workbench/test/: test_debug_cli.py  test_doctor_cli.py  test_fs_cli.py  test_migrate_cli.py  test_paths.py  test_profile_cli.py  test_repair_cli.py  test_shell_cli.py  test_status_cli.py  test_summarize_cli.py  test_workspace.py
