[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-workbench"
version = "0.2.0"
description = "Local Ollama-first CLI workbench"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
ollama-workbench = "ollama_workbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
